:hammer:  added small project re-structure and logs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
-cmake_minimum_required(VERSION 3.16.3)
+cmake_minimum_required(VERSION 3.0.0)
+project(sudoku VERSION 0.1.0)
 
-project(sudoku_solver)
+include(CTest)
+enable_testing()
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_subdirectory(src)
+add_executable(sudoku src/main.cpp)
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
